--- a/package.json
+++ b/package.json
@@ -8,27 +8,17 @@
 	},
 	"license": "MIT",
 	"type": "module",
-	"types": "./esm/index.d.ts",
-	"main": "./cjs/index.js",
-	"module": "./esm/index.js",
+	"types": "./dist/index.d.ts",
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
 	"exports": {
 		".": {
-			"import": {
-				"types": "./esm/index.d.ts",
-				"default": "./esm/index.js"
-			},
-			"require": {
-				"types": "./cjs/index.d.ts",
-				"default": "./cjs/index.js"
-			},
-			"default": "./cjs/index.js"
+			"types": "./dist/index.d.ts",
+			"default": "./dist/index.js"
 		}
 	},
 	"scripts": {
-		"build": "run-s clean build:*",
-		"build:esm": "tsc -p ./tsconfig.esm.json && echo '{\"type\":\"module\"}' > esm/package.json",
-		"build:cjs": "tsc -p ./tsconfig.cjs.json && echo '{\"type\":\"commonjs\"}' > cjs/package.json",
-		"clean": "rm -rf ./esm ./cjs",
+		"build": "rm -rf ./dist && tsc",
 		"test": "vitest run --coverage",
 		"lint": "eslint . --ext .cjs,.mjs,.js,.ts,.cts,.mts",
 		"lint:fix": "eslint . --ext .cjs,.mjs,.js,.ts,.cts,.mts --fix",
@@ -51,14 +41,12 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.1",
 		"npm-check-updates": "^16.14.12",
-		"npm-run-all": "^4.1.5",
 		"prettier": "^3.1.1",
 		"typescript": "^5.3.3",
 		"vitest": "^1.1.1"
 	},
 	"files": [
-		"esm",
-		"cjs"
+		"dist"
 	],
 	"keywords": []
 }
