--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
 	"extends": ["@tsconfig/recommended/tsconfig.json", "@tsconfig/node18/tsconfig.json"],
 	"compilerOptions": {
 		"declaration": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"outDir": "dist",
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules", "esm", "cjs"]
