--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"declaration": true,
 		"sourceMap": true,
-		"outDir": "dist",
+		"outDir": "dist"
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules", "esm", "cjs"]
