--- a/renovate.json
+++ b/renovate.json
@@ -22,22 +22,25 @@
 		},
 		{
 			"matchPackageNames": [
-				"@tsconfig/node16",
+				"ioredis",
+				"redis",
+				"svelte-kit-sessions",
+				"@tsconfig/node18",
 				"@tsconfig/recommended",
+				"@types/express",
 				"@types/node",
 				"@typescript-eslint/eslint-plugin",
 				"@typescript-eslint/parser",
+				"@vitest/coverage-v8",
 				"eslint",
 				"eslint-config-airbnb-base",
 				"eslint-config-airbnb-typescript",
 				"eslint-config-prettier",
 				"eslint-plugin-import",
-				"license-checker",
-				"lint-staged",
+				"npm-check-updates",
 				"prettier",
-				"simple-git-hooks",
-				"tsconfig-paths",
-				"typescript"
+				"typescript",
+				"vitest"
 			],
 			"rangeStrategy": "bump"
 		}
