--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 	"dependencies": {
 		"ioredis": "^5.3.2",
 		"redis": "^4.6.12",
-		"svelte-kit-sessions": "^0.0.5"
+		"svelte-kit-sessions": "^0.0.6"
 	},
 	"devDependencies": {
 		"@tsconfig/node18": "^18.2.2",
@@ -38,7 +38,7 @@
 		"@types/node": "^18.19.4",
 		"@typescript-eslint/eslint-plugin": "^6.17.0",
 		"@typescript-eslint/parser": "^6.17.0",
-		"@vitest/coverage-v8": "^1.1.1",
+		"@vitest/coverage-v8": "^1.1.2",
 		"eslint": "^8.56.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-airbnb-typescript": "^17.1.0",
@@ -47,10 +47,20 @@
 		"npm-check-updates": "^16.14.12",
 		"prettier": "^3.1.1",
 		"typescript": "^5.3.3",
-		"vitest": "^1.1.1"
+		"vitest": "^1.1.2"
 	},
 	"files": [
 		"dist"
 	],
-	"keywords": []
+	"keywords": [
+		"sveltekit",
+		"svelte-kit",
+		"redis",
+		"session",
+		"connect-redis",
+		"connect",
+		"session-store",
+		"session-store-redis",
+		"svelte-kit-sessions"
+	]
 }
