--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "svelte-kit-connect-redis",
-	"version": "0.0.2",
+	"version": "0.0.3",
+	"description": "svelte-kit-connect-redis provides Redis session storage for svelte-kit-sessions.",
 	"author": "yutak23 <yuta.katayama.23+github@gmail.com> (https://github.com/yutak23)",
 	"repository": {
 		"type": "git",
